# esp32-czone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flash.cmd  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
data/: config.zcf
docs/: status-flow.md
include/: board.h  czone_can.h  czone_device_identity.h  czone_protocol.h  device_config.h  digital_inputs.h  i2c_bus.h  relay_controller.h  tca9554.h  usb_terminal.h  zcf_config.h  zcf_store.h
scripts/: generate_version_header.py
src/: CMakeLists.txt  board.c  czone_can.c  czone_protocol.c  device_config.c  digital_inputs.c  i2c_bus.c  idf_component.yml  main.c  relay_controller.c  tca9554.c  usb_terminal.c  zcf_config.c  zcf_store.c
